crates/dag-macros/tests/ui/workflow_if_selector_pointer_non_string.stderr
error: if_! requires `selector_pointer = "/json/pointer"`
  --> tests/ui/workflow_if_selector_pointer_non_string.rs:40:28
   |
40 |         selector_pointer = 123,
   |                            ^^^
